# HierarchyDetector

./: README.md  pyproject.toml
docs/: address.txt  note.svgz
src/HierarchyDetector.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: tester.ipynb
